# aduc

./: .gitignore  README.md  note.md  readme  readme.md  report1.nsys-rep  test  test.cpp
src/: (v1)gemmNaive.cu  (v2)gemmTile.cu  (v3)ECG1.cu  (v3)ECG2.cu  (v3)experiment_control_group.cu  (v3)gemmShareMem.cu  (v3)r1_ShareMem.cu  (v4)gemmColMajorSMA.cu  (v4)r1_ColMajorSMA.cu  (v5)gemmHideSmemLatency.cu  (v6)gemmHideGmemLatency.cu  CMakeLists.txt  gemm  main.cpp  run.sh  test.cu  util.cuh  v2_gemmTile.cu  v5_gemmHideSmemLatency.cu  v6_gemmHideGmemLatency.cu
src/activation/: CMakeLists.txt  run.sh  test.cu
src/activation/include/: matrix.h
src/activation/kernel/: CMakeLists.txt  relu.cu  sigmoid.cu
src/dot_product/: CMakeLists.txt  debug.cuh  run.sh  test.cu
src/flash_attention/: CMakeLists.txt  cpu_flashattn.h  debug.cuh  flash_attention_forward.cu  matrix.h  readme.md  run.sh  test.cu
src/layernorm/: CMakeLists.txt  float4.cuh  layernorm1d.cu  run.sh  test.cu
src/reduce/: CMakeLists.txt  README.md  run.sh  test.cu
src/sgemm/: CMakeLists.txt  README.md  Tesla_P4.nsys-rep  data.ipynb  gemm  matrix.h  run.sh  test.cu  util.cuh  v3_gemmShareMem.cu  v4_gemmColMajorSMA.cu  v6_r1_HideGmemLatency.cu  v6_r1_HideGmemLatency.cu.cu
src/sgemm/old/: check.cu  p.cu  testhgl.cu  v1_gemmNaive.cu  v3_r1_ShareMem.cu  v5_r1_HideSmemLatency.cu
src/sgemv/: CMakeLists.txt  matrix.h  readme  run.sh  sgemv.cuh  test.cu
src/softmax/: CMakeLists.txt  readme.md  run.sh  softmax  test.cu
src/softmax/include/: atomicMaxFloat.cuh  debug.cuh  float4.cuh  matrix.h  reduce.cuh
src/softmax/kernel/: online_softmax.cu  safe_softmax.cu  softmax.cu
src/warp-level-primitives/: CMakeLists.txt  README.md
